# cymbalrs

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/commands/: mod.rs  music.rs  test.rs
src/events/: music.rs
