[package]
name = "cymbalrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
reqwest = "0.11"
serenity = { version = "0.12.1", features = ["gateway"] }
songbird = { version = "0.4.1", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["all-formats", "all-codecs"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
